Fix warning: Building a command line with string concatenation